# c-kernel

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: run_matrix.yml  run_tests.yml
ckernel/: .gitignore  __init__.py  __main__.py  async_command.py  async_kernel.py  autocompile_kernel.py  base_kernel.py  ckernel_install.py  log.py  main.py  protocols.py  resource.py  resources.py  trigger.py  util.py
ckernel/_resources/: ckernel_dyn_input_wrappers.c  ckernel_mqueue.c
ckernel/_resources/include/: ckernel_mqueue.h
ckernel/kernels/: __init__.py  async_kernel.py  autocompile_kernel.py  base_kernel.py
ckernel/resources/: ck_input_wrappers.c  ckernel_dyn_input_wrappers.c  ckernel_mqueue.c  kernel.sh
ckernel/resources/include/: ckernel_mqueue.h
docs/: 00-install.rst  01-use.rst  02-example.rst  03-FAQ.rst  conf.py  index.rst  requirements.txt
tests/: conftest.py  test_interrupt_infinite_loop.py  test_kernel_lifecycle.py  test_missing_filename_comment.py  test_run_c_notebook.py  test_run_cpp_notebook.py
tests/data/: test_c_code_cell.ipynb  test_cpp_code_cell.ipynb  test_infinite_loop.ipynb  test_missing_filename_comment.ipynb
