[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.8"
name = "ckernel"
description = "IPython kernels for teaching and learning C/C++ in a Jupyter notebook, providing C/C++ syntax highlighting and a little more magic."
readme = "README.md"
version = "0.5"
authors = [{ name = "Adam Tuft" }]
dependencies = ["sysv_ipc", "ipykernel", "jupyter_client", "colorama", "notebook"]
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: C",
  "Programming Language :: C++",
  "Topic :: Education",
  "Framework :: IPython",
  "Framework :: Jupyter",
  "Operating System :: POSIX :: Linux",
]
keywords = ["jupyter", "notebook", "kernel", "c", "c++"]

[project.urls]
"Homepage" = "https://github.com/adamtuft/c-kernel"
"Bug Tracker" = "https://github.com/adamtuft/c-kernel/issues"

[project.scripts]
ckernel = "ckernel.main:main"

[tool.setuptools]
packages = ["ckernel", "ckernel.resources"]

[tool.setuptools.package-data]
ckernel = ["*"]
