[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.8"
name = "ckernel"
description = "Provides a Jupyter kernel which allows automatic compilation and execution of C/C++ code from a notebook environment."
readme = "README.md"
version = "0.5.2"
authors = [{ name = "Adam Tuft" }]
dependencies = ["sysv_ipc", "ipykernel", "jupyter_client", "colorama", "notebook"]
license = { text = "BSD-3-Clause" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: C",
  "Programming Language :: C++",
  "Topic :: Education",
  "Framework :: IPython",
  "Framework :: Jupyter",
  "Operating System :: POSIX :: Linux",
]
keywords = ["jupyter", "notebook", "kernel", "c", "c++"]

[project.urls]
"Homepage" = "https://c-kernel.readthedocs.io/en/latest/index.html"
"Bug Tracker" = "https://github.com/adamtuft/c-kernel/issues"

[project.scripts]
ckernel = "ckernel.main:main"

[tool.setuptools]
packages = ["ckernel", "ckernel.resources"]

[tool.setuptools.package-data]
ckernel = ["*"]
