[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "ckernel"
description = "Provides a Jupyter kernel which allows automatic compilation and execution of C/C++ code from a notebook environment."
readme = "README.md"
version = "0.5.3"
authors = [{ name = "Adam Tuft" }]
dependencies = [
    "colorama>=0.4.6",
    "ipykernel>=6.29.5",
    "jupyter-client>=8.6.3",
    "notebook>=7.3.3",
    "sysv-ipc>=1.1.0",
]
license = { text = "BSD-3-Clause" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: C",
  "Programming Language :: C++",
  "Topic :: Education",
  "Framework :: IPython",
  "Framework :: Jupyter",
  "Operating System :: POSIX :: Linux",
]
keywords = ["jupyter", "notebook", "kernel", "c", "c++"]

[project.urls]
"Homepage" = "https://c-kernel.readthedocs.io/en/latest/index.html"
"Bug Tracker" = "https://github.com/adamtuft/c-kernel/issues"

[project.scripts]
ckernel = "ckernel.main:main"

[tool.setuptools]
packages = ["ckernel", "ckernel.resources"]

[tool.setuptools.package-data]
ckernel = ["*"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
